CXV1-15001 - Fixed issue that made the session to re-login on Firefox. Users can now logout and stay logout CXV1-15436 - Added CSS to prevent 'jitters' on table views on RTD

--- a/src/app/components/reporting/realtime/realtimeDashboardEditor/realtimeDashboardsEditor.scss
+++ b/src/app/components/reporting/realtime/realtimeDashboardEditor/realtimeDashboardsEditor.scss
@@ -36,7 +36,7 @@ lo-resource-table {
 .realtime-dashboard-editor-wrapper {
   font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
   position: relative;
-  height: 100%;
+  height: 100vh;
   width: 100%;
 }
 
